tests/fixtures/fail/preset-nextjs/app/Button.tsx
export function Button() {
  return <button>Should be kebab-case</button>
}
